--- a/force-app/test/default/classes/SummitEventsContactMatching_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsContactMatching_TEST.cls
@@ -14,27 +14,29 @@ public class SummitEventsContactMatching_TEST {
         seaTestEvent.Contact_Creation_Duplicate_Rule__c = 'Standard Contact Duplicate Rule';
         seaTestEvent.Custom_Metadata_Contact_Matching_Method__c = 'Admissions';
         update seaTestEvent;
+        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User','Summit_Events_Admin');
+        System.runAs(testUser) {
+            Test.startTest();
+            seaTestRegistration.Status__c = 'Registered';
+            seaTestRegistration.Registrant_Preferred_First_Name__c = 'Big T';
+            update seaTestRegistration;
 
-        Test.startTest();
-        seaTestRegistration.Status__c = 'Registered';
-        seaTestRegistration.Registrant_Preferred_First_Name__c = 'Big T';
-        update seaTestRegistration;
+            seaTestRegistration.Contact__c = null;
+            seaTestRegistration.Registrant_Date_of_Birth__c = System.today();
+            update seaTestRegistration;
 
-        seaTestRegistration.Contact__c = null;
-        seaTestRegistration.Registrant_Date_of_Birth__c = System.today();
-        update seaTestRegistration;
+            seaTestRegistration.Contact__c = null;
+            seaTestRegistration.Registrant_First_Name__c = 'Tester';
+            update seaTestRegistration;
 
-        seaTestRegistration.Contact__c = null;
-        seaTestRegistration.Registrant_First_Name__c = 'Tester';
-        update seaTestRegistration;
+            seaTestRegistration.Contact__c = null;
+            seaTestRegistration.Registrant_Phone__c = '1234567890';
+            update seaTestRegistration;
 
-        seaTestRegistration.Contact__c = null;
-        seaTestRegistration.Registrant_Phone__c = '1234567890';
-        update seaTestRegistration;
+            System.assert(String.isBlank(seaTestRegistration.Contact__c));
 
-        System.assert(String.isBlank(seaTestRegistration.Contact__c));
-
-        Test.stopTest();
+            Test.stopTest();
+        }
     }
 
     @IsTest
@@ -47,28 +49,30 @@ public class SummitEventsContactMatching_TEST {
         seaTestEvent.Custom_Metadata_Contact_Matching_Method__c = 'Admissions';
         seaTestEvent.Contact_Matching_Multiple_Match_Behavior__c = 'Skip matching';
         update seaTestEvent;
+        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User','Summit_Events_Admin');
+        System.runAs(testUser) {
+            Test.startTest();
+            Database.DMLOptions dml = new Database.DMLOptions();
+            dml.duplicateRuleHeader.allowSave = true;
 
-        Test.startTest();
-        Database.DMLOptions dml = new Database.DMLOptions();
-        dml.duplicateRuleHeader.allowSave = true;
+            Contact c1 = new Contact(FirstName = 'Test', LastName = 'Record', Email = 'test@example.com');
+            insert c1;
 
-        Contact c1 = new Contact(FirstName = 'Test', LastName = 'Record', Email = 'test@example.com');
-        insert c1;
+            Contact c2 = new Contact(FirstName = 'Test', LastName = 'Record', Email = 'test@example.com');
+            Database.insert(c2, dml);
+            seaTestRegistration.Registrant_Preferred_First_Name__c = 'Big T';
+            update seaTestRegistration;
 
-        Contact c2 = new Contact(FirstName = 'Test', LastName = 'Record', Email = 'test@example.com');
-        Database.insert(c2, dml);
-        seaTestRegistration.Registrant_Preferred_First_Name__c = 'Big T';
-        update seaTestRegistration;
+            Summit_Events_Registration__c registration = [SELECT Id, Contact__c FROM Summit_Events_Registration__c WHERE Id = :seaTestRegistration.Id];
+            System.assert(String.isBlank(registration.Contact__c));
 
-        Summit_Events_Registration__c registration = [SELECT Id, Contact__c FROM Summit_Events_Registration__c WHERE Id = :seaTestRegistration.Id];
-        System.assert(String.isBlank(registration.Contact__c));
+            seaTestEvent.Contact_Matching_Multiple_Match_Behavior__c = 'Match with most recently modified';
+            update seaTestEvent;
 
-        seaTestEvent.Contact_Matching_Multiple_Match_Behavior__c = 'Match with most recently modified';
-        update seaTestEvent;
-
-        update seaTestRegistration;
-        registration = [SELECT Id, Contact__c FROM Summit_Events_Registration__c WHERE Id = :registration.Id];
-        System.assert(String.isNotBlank(registration.Contact__c));
-        Test.stopTest();
+            update seaTestRegistration;
+            registration = [SELECT Id, Contact__c FROM Summit_Events_Registration__c WHERE Id = :registration.Id];
+            System.assert(String.isNotBlank(registration.Contact__c));
+            Test.stopTest();
+        }
     }
 }
