--- a/force-app/test/default/classes/SummitEventsSubmit_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsSubmit_TEST.cls
@@ -10,20 +10,28 @@ private class SummitEventsSubmit_TEST {
         SummitEventsTestSharedDataFactory.createContact('TestFirst1', 'Test', 'TestLast1', 'test1@valleyhill.net', '55418', '(555) 555-5555', '1971-03-22', '2012');
         List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
         Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'TestFirst', 'TestLast', 'test@valleyhill.net', '55418', '1971-03-22', '2012', null);
-        Test.startTest();
-        PageReference pageRef = Page.SummitEventsSubmit;
-        pageRef.getParameters().put('adminopen', 'true');
-        Test.setCurrentPage(pageRef);
+        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User','Summit_Events_Registrant');
+        //Get namespace if packaged
+        String namespace = SummitEventsNamespace.getNamespace();
+        if (String.isNotBlank(namespace)) {
+            namespace = namespace + '__';
+        }
+        System.runAs(testUser) {
+            Test.startTest();
+            PageReference pageRef = Page.SummitEventsSubmit;
+            pageRef.getParameters().put('adminopen', 'true');
+            Test.setCurrentPage(pageRef);
 
-        SummitEventsShared SEShared = new SummitEventsShared();
-        SEShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
+            SummitEventsShared SEShared = new SummitEventsShared();
+            SEShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
 
-        //ApexPages.currentPage().getParameters().put('instanceID', seaTestInstances.Id);
-        SummitEventsSubmitController submitCtrl = new SummitEventsSubmitController();
-        System.assertEquals(submitCtrl.checkEventDetails(), null);
-        System.assertEquals(submitCtrl.previousPage().getUrl(), '/apex/summiteventsregister?adminopen=true');
-        System.assertEquals(submitCtrl.submitRegistration().getUrl(), '/apex/summiteventsconfirmation?adminopen=true');
-        Test.stopTest();
+            //ApexPages.currentPage().getParameters().put('instanceID', seaTestInstances.Id);
+            SummitEventsSubmitController submitCtrl = new SummitEventsSubmitController();
+            System.assertEquals(submitCtrl.checkEventDetails(), null);
+            System.assertEquals(submitCtrl.previousPage().getUrl(), '/apex/' + namespace + 'summiteventsregister?adminopen=true');
+            System.assertEquals(submitCtrl.submitRegistration().getUrl(), '/apex/' + namespace + 'summiteventsconfirmation?adminopen=true');
+            Test.stopTest();
+        }
     }
 
     @IsTest static void testSubmitWithAppointments() {
@@ -38,19 +46,24 @@ private class SummitEventsSubmit_TEST {
             testAppointments.add(appointment);
         }
         insert testAppointments;
+        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User','Summit_Events_Registrant');
+        String namespace = SummitEventsNamespace.getNamespace();
+        if (String.isNotBlank(namespace)) {
+            namespace = namespace + '__';
+        }
+        System.runAs(testUser) {
+            Test.startTest();
+            PageReference pageRef = Page.SummitEventsSubmit;
+            Test.setCurrentPage(pageRef);
+            SummitEventsShared SEShared = new SummitEventsShared();
+            SEShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
 
-        Test.startTest();
-        PageReference pageRef = Page.SummitEventsSubmit;
-        Test.setCurrentPage(pageRef);
-        SummitEventsShared SEShared = new SummitEventsShared();
-        SEShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
-
-        //ApexPages.currentPage().getParameters().put('instanceID', seaTestInstances.Id);
-        SummitEventsSubmitController submitCtrl = new SummitEventsSubmitController();
-        System.assertEquals(submitCtrl.previousPage().getUrl(), '/apex/summiteventsregisterappointments');
-        System.assertEquals(submitCtrl.submitRegistration().getUrl(), '/apex/summiteventsconfirmation');
-        Test.stopTest();
-
+            //ApexPages.currentPage().getParameters().put('instanceID', seaTestInstances.Id);
+            SummitEventsSubmitController submitCtrl = new SummitEventsSubmitController();
+            System.assertEquals(submitCtrl.previousPage().getUrl(), '/apex/' + namespace + 'summiteventsregisterappointments');
+            System.assertEquals(submitCtrl.submitRegistration().getUrl(), '/apex/' + namespace + 'summiteventsconfirmation');
+            Test.stopTest();
+        }
     }
 
 
@@ -79,18 +92,24 @@ private class SummitEventsSubmit_TEST {
             testFees.add(fee);
         }
         insert testFees;
+        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User','Summit_Events_Registrant');
+        String namespace = SummitEventsNamespace.getNamespace();
+        if (String.isNotBlank(namespace)) {
+            namespace = namespace + '__';
+        }
+        System.runAs(testUser) {
+            Test.startTest();
+            PageReference pageRef = Page.SummitEventsSubmit;
+            Test.setCurrentPage(pageRef);
+            SummitEventsShared SEShared = new SummitEventsShared();
+            SEShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
 
-        Test.startTest();
-        PageReference pageRef = Page.SummitEventsSubmit;
-        Test.setCurrentPage(pageRef);
-        SummitEventsShared SEShared = new SummitEventsShared();
-        SEShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
-
-        //ApexPages.currentPage().getParameters().put('instanceID', seaTestInstances.Id);
-        SummitEventsSubmitController submitCtrl = new SummitEventsSubmitController();
-        System.assertEquals(submitCtrl.previousPage().getUrl(), '/apex/summiteventsdonation');
-        System.assertEquals(submitCtrl.submitRegistration().getUrl(), '/apex/summiteventsconfirmation');
-        Test.stopTest();
+            //ApexPages.currentPage().getParameters().put('instanceID', seaTestInstances.Id);
+            SummitEventsSubmitController submitCtrl = new SummitEventsSubmitController();
+            System.assertEquals(submitCtrl.previousPage().getUrl(), '/apex/' + namespace + 'summiteventsdonation');
+            System.assertEquals(submitCtrl.submitRegistration().getUrl(), '/apex/' + namespace + 'summiteventsconfirmation');
+            Test.stopTest();
+        }
 
     }
 
