centralized page flow in shared for previous next links

--- a/force-app/main/default/classes/SummitEventsSubmitController.cls
+++ b/force-app/main/default/classes/SummitEventsSubmitController.cls
@@ -23,6 +23,7 @@ public with sharing class SummitEventsSubmitController {
     public String eventOnlyPaymentAmountFormatted { get; set; }
     public String paymentItemized { get; set; }
     public Boolean showPaymentButton { get; set; }
+    public Map<String, PageReference> pageFlow {get;set;}
 
     public SummitEventsSubmitController() {
         showPaymentButton = false;
@@ -50,6 +51,8 @@ public with sharing class SummitEventsSubmitController {
                     WHERE Id = :eventInformation.instanceId
                     WITH SECURITY_ENFORCED
             ];
+
+            pageFlow = SeaShared.getPageFlow(eventInformation.eventId, eventInstance.Instance_Title__c, ApexPages.currentPage());
 
             if (String.isNotBlank(ApexPages.currentPage().getParameters().get('adminopen'))) {
                 adminOpen = Boolean.valueOf(ApexPages.currentPage().getParameters().get('adminopen'));
@@ -123,43 +126,10 @@ public with sharing class SummitEventsSubmitController {
     }
 
     public PageReference submitRegistration() {
-        PageReference confirmPage = Page.SummitEventsConfirmation;
-        if (String.isNotBlank(ApexPages.currentPage().getParameters().get('adminopen'))) {
-            confirmPage.setRedirect(true);
-            confirmPage.getParameters().put('adminopen', ApexPages.currentPage().getParameters().get('adminopen'));
-        }
-        return confirmPage;
+        return pageFlow.get('Next');
     }
 
     public PageReference previousPage() {
-        List<Summit_Events_Appointment_Type__c> appointmentTypes = null;
-
-        appointmentTypes = [
-                SELECT Id
-                FROM Summit_Events_Appointment_Type__c
-                WHERE Summit_Events__c = :eventInformation.eventId
-                AND (
-                        Restrict_To_Instance_Title__r.Instance_Title__c = :eventInstance.Instance_Title__c
-                        OR Restrict_To_Instance_Title__r.Instance_Title__c = NULL
-                )
-                WITH SECURITY_ENFORCED
-        ];
-
-
-        PageReference lastPage;
-        if (eventPage.Display_Optional_Donation__c) {
-            lastPage = Page.SummitEventsDonation;
-        } else if (appointmentTypes.size() == 0) {
-            //If no options skip that step
-            lastPage = Page.SummitEventsRegister;
-        } else {
-            lastPage = Page.SummitEventsRegisterAppointments;
-        }
-
-        if (String.isNotBlank(ApexPages.currentPage().getParameters().get('adminopen'))) {
-            lastPage.setRedirect(true);
-            lastPage.getParameters().put('adminopen', ApexPages.currentPage().getParameters().get('adminopen'));
-        }
-        return lastPage;
+        return pageFlow.get('Previous');
     }
 }
